--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Disasters</title>
+    <title>Disaster response project</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+    <style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+p.centered { 
+   text-align: center;
+}
+
+</style>
 </head>
 
 <body>
@@ -19,14 +31,17 @@
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="/">Disaster Response Project</a>
-        </div>
+        </div> 
+
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="https://www.udacity.com/">Made with Udacity</a></li>
-                <li><a href="https://github.com/">Contact</a></li>
+                <li><a href="https://github.com/gajdulj/disaster_response">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/jakub-gajdul-15b925107/">LinkedIn</a></li>
             </ul>
         </div>
+
     </div>
+
 </nav>
 
 
@@ -52,6 +67,32 @@
     </div>
 </div>
 
+    <p class="centered">The purpouse of this project was to gain experience in writing Data Engineering Pipelines, Machine Learning Pipelines and learning the basics of web development.
+    <br> <br>
+    I have analysed the disaster data from <a href="https://www.figure-eight.com/">Figure Eight</a> and built a multilabel classifier model for an API that classifies disaster messages.
+    <br> <br>
+    Use the box above to see how classifier works and see below for exploration of the dataset. You can find more detailed analysis on my <a href="https://github.com/gajdulj/">Github</a>.
+    </p>
+
+<!-- matplotlib  -->
+<div class="plots" >
+	<br>
+	<br>
+	        <div class="page-header">
+            <h1 class="text-center">Commonly used words</h1>
+        	</div>
+
+    <p class="centered">To better understand the dataset, I have had a look at the words used across all the messages. <br> From a quick look I have noticed that most popular words are "water","people" and "food".
+    </p>
+    <br>
+    <br>
+        <img src="/static/Wordcloud.png" alt="Wordcloud" >
+    <p class="centered">To better understand the labels and their distribution, I have produced the below summary counting the message counts from each category.
+    </p>
+
+        <img src="/static/Categories.png" alt="Message categories">
+</div>
+
 <div class="container">
     {% block content %}
         <div class="page-header">
@@ -72,5 +113,14 @@
     }
 </script>
 
+
+<div class="jumbotron text-center" style="margin-top: 15px;
+  margin-bottom: 0px; padding: 5px">
+    <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://uk.linkedin.com/in/jakub-gajdul-15b925107/"> Jakub Gajdul</a>
+  </div>
+  <!-- Copyright -->
+</div>
 </body>
 </html>
