--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -67,7 +67,7 @@ p.centered {
     </div>
 </div>
 
-    <p class="centered">The purpouse of this project was to gain experience in writing Data Engineering Pipelines, Machine Learning Pipelines and learning the basics of web development.
+    <p class="centered">The purpose of this project was to gain experience in writing Data Engineering Pipelines, Machine Learning Pipelines and learning the basics of web development.
     <br> <br>
     I have analysed the disaster data from <a href="https://www.figure-eight.com/">Figure Eight</a> and built a multilabel classifier model for an API that classifies disaster messages.
     <br> <br>
@@ -84,14 +84,9 @@ p.centered {
 
     <p class="centered">To better understand the dataset, I have had a look at the words used across all the messages. <br> From a quick look I have noticed that most popular words are "water","people" and "food".
     </p>
-    <br>
-    <br>
-        <img src="/static/Wordcloud.png" alt="Wordcloud" >
-    <p class="centered">To better understand the labels and their distribution, I have produced the below summary counting the message counts from each category.
-    </p>
 
-        <img src="/static/Categories.png" alt="Message categories">
-</div>
+    <br>
+        <img src="/static/wordcloud.png" alt="Wordcloud" >
 
 <div class="container">
     {% block content %}
