--- a/app/templates/go.html
+++ b/app/templates/go.html
@@ -1,5 +1,52 @@
-{% extends "master.html" %}
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Disaster response project</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+    <style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+p.centered { 
+   text-align: center;
+}
+
+</style>
+</head>
+
+<body>
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">Disaster Response Project</a>
+        </div> 
+
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="https://github.com/gajdulj/disaster_response">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/jakub-gajdul-15b925107/">LinkedIn</a></li>
+            </ul>
+        </div>
+
+    </div>
+
+</nav>
+
 {% block title %}Results{% endblock %}
+
+
 
 {% block message %}
     <hr />
@@ -22,3 +69,14 @@
     </div>
 
 {% endblock %}
+
+<div class="jumbotron text-center" style="margin-top: 15px;
+  margin-bottom: 0px; padding: 5px">
+    <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://uk.linkedin.com/in/jakub-gajdul-15b925107/"> Jakub Gajdul</a>
+  </div>
+  <!-- Copyright -->
+</div>
+</body>
+</html>
