--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -8,7 +8,9 @@
     <title>Disaster response project</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
@@ -29,15 +31,20 @@ p.centered {
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Disaster Response Project</a>
+        <div class="navbar-header active">
+            <a class="navbar-brand" href="/" style="color:white" >Disaster Response Project</a>
         </div> 
 
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="https://github.com/gajdulj/disaster_response">Github</a></li>
                 <li><a href="https://www.linkedin.com/in/jakub-gajdul-15b925107/">LinkedIn</a></li>
+            
             </ul>
+          <p class="navbar-text pull-right">
+            Jakub Gajdul
+          </p>
+
         </div>
 
     </div>
@@ -76,8 +83,6 @@ p.centered {
 
 <!-- matplotlib  -->
 <div class="plots" >
-	<br>
-	<br>
 	        <div class="page-header">
             <h1 class="text-center">Commonly used words</h1>
         	</div>
