--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -91,7 +91,7 @@ p.centered {
     </p>
 
     <br>
-        <img src="/static/wordcloud.png" alt="Wordcloud" >
+        <img src="/static/wordcloud-dark.png" alt="Wordcloud" >
 
     <br>
     <p class="centered">To further drill down to words specific to each of the categories, select a category below.
